fix vertical align of material icon

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -55,6 +55,7 @@ i.material-svg-icon {
   -webkit-mask-size: 1.15em;
   margin-inline-start: 0.3em;
   margin-inline-end: 0.3em;
+  vertical-align: middle;
 }
 
 i.material-icon-schedule {
